kubectl/posgresql.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      components: postgres
  template:
    metadata:
      labels:
        components: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:16.0
        imagePullPolicy: Always
        ports:
        - containerPort: 5432
        resources:
          limits:
            memory: "750Mi"
            cpu: "750m"
        volumeMounts:
        - name: postgres-data
          mountPath: /var/lib/postgresgl/data
          subPath: postgres
      volumes:
      - name: postgres-data
        persistentVolumeClaim:
          claimName: postgres-pvc
---

apiVersion: v1
kind: Service
metadata:
  name: postgres-clusterip
spec:
  type: ClusterIP
  ports:
  - port: 5432
    protocol: TCP
  selector:
    components: postgres
