kubectl/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  annotations:
    nginx.ingreess.kubernetes.io/add-base-url: "true"
  labels:
    name: myingress
spec:
  ingressClassName: nginx
  rules:
  - host: ches.test
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: short-app-clusterip
            port:
              number: 80
